--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: eartho_one
-description: Eartho. One
+description: Get users from all sources into your app fast!
 version: 1.0.0
 repository: https://github.com/eartho-group/one-client-flutter
 
