--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+
 
 dev_dependencies:
   flutter_test:
