--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.eartho.eartho_one_example"
+        applicationId "com.eartho.oneexample"
         minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
