--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eartho.eartho_one_example">
+    package="com.eartho.oneexample">
    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="eartho_one_example"
+        android:label="oneexample"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
