--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.22
 repository: https://github.com/eartho-group/one-client-flutter
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.5 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
@@ -13,12 +13,13 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
-  js: ^0.6.3
+  plugin_platform_interface: ^2.0.2
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -36,6 +37,9 @@ flutter:
         pluginClass: EarthoOnePlugin
       ios:
         pluginClass: EarthoOnePlugin
+      web:
+        pluginClass: EarthoOneWeb
+        fileName: eartho_one_web.dart
 #      web:
 #        pluginClass: EarthoOneWebPlugin
 #        fileName: eartho_one_web.dart
