--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: eartho_one
 description: Login and authentication of all sources with 1 line of code ! Google, Twitter, Github, Facebook, Apple, Microsoft, Twitch, SMS, Metamask, VK
-version: 1.2.4
+version: 1.3.0
 repository: https://github.com/eartho-group/one-client-flutter
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
+    sdk: '>=2.16.0 <4.0.0'
+    flutter: ">=1.12.13+hotfix.5"
 
 dependencies:
   flutter:
