--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    compileSdkVersion 34
     namespace = "com.eartho.one_flutter"
 
     compileOptions {
